Fixed z-index on login screen (animation layers)

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -76,7 +76,7 @@ app-sign-up-dialog {
     border-radius: 8px;
     color: white;
     background-color: $col-ref-active-nav;
-    z-index: 10;
+    z-index: 2;
   }
 }
 
@@ -86,7 +86,7 @@ app-sign-up-dialog {
   bottom: 5vh;
   left: 50%;
   transform: translateX(-50%);
-  z-index: 4;
+  z-index: 2;
 
   > p {
     cursor: pointer;
